Deactivate health check endpoint